--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,123 @@
 body {
     border: 10px 10px 10px 10px;
-    background: #FFFFFF;
+    background: url(/weight-tracker/img/main-bg.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: 'Roboto';
 }
 
 h2,
 .heading-word {
+    margin: auto;
     position: absolute;
     width: 337px;
     height: 41px;
-    left: 274px;
+    left: 500px;
     top: 50px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
-    font-weight: normal;
-    font-size: 26px;
+    font-weight: 600;
+    font-size: 30px;
     line-height: 30px;
     color: #EB322E;
 }
 
 .image-section>svg {
     position: absolute;
-    width: 337px;
-    height: 271px;
-    left: 27px;
+    width: 450px;
+    height: 280px;
+    left: 130px;
     top: 158px;
     background: #FFFFFF;
 }
+
+.quotes {
+    position: absolute;
+    width: 365px;
+    left: 130px;
+    top: 420px;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 19px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.form-parts {
+    margin-top: 3em;
+    margin-left: 35em;
+    position: absolute;
+    top: 300px;
+    left: 515px;
+    height: 500em;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    color: #000000;
+}
+
+.form-parts input[type=text] {
+    background: #FFFFFF;
+    margin-left: 12px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
+.form-parts input[type=number] {
+    background: #FFFFFF;
+    margin-left: 12px;
+    border-radius: 8px;
+}
+
+.form-parts img {
+    padding-right: 5px;
+    color: white;
+}
+
+.name-form {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    width: 69px;
+    height: 24px;
+    left: 521px;
+    top: 313px;
+}
+
+.weight-form {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    width: 91px;
+    height: 24px;
+    left: 516px;
+    top: 383px;
+}
+
+.height-form {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    width: 85px;
+    height: 24px;
+    left: 521px;
+    top: 453px;
+}
+
+button {
+    position: absolute;
+    width: 100px;
+    height: 30px;
+    left: 86em;
+    top: 41em;
+    background: #EB322E;
+    border-radius: 15px;
+}
+
+.form-button {}
