--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,15 @@ body {
     font-family: 'Roboto';
 }
 
-@media screen and {
-    max-width: 1080px
-}
-
-{
-    h2 {}
+@media screen and (max-width: 600px) {
+    body {
+        background: url(/weight-tracker/img/mobile-bg.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: wrap;
+        align-content: flex-start;
+    }
 }
 
 h2,
@@ -30,7 +33,14 @@ h2,
     color: #EB322E;
 }
 
-@media screen and (min-width: 320px) {}
+@media screen and (max-width: 600px) {
+    h2,
+    .heading-word {
+        position: absolute;
+        top: 25px;
+        left: 100px;
+    }
+}
 
 .image-section>svg {
     position: absolute;
@@ -39,6 +49,16 @@ h2,
     left: 130px;
     top: 158px;
     background: #FFFFFF;
+}
+
+@media screen and (max-width: 600px) {
+    .image-section>svg {
+        position: absolute;
+        width: 200px;
+        height: 190px;
+        top: 120px;
+        left: 10px;
+    }
 }
 
 .quotes {
@@ -54,6 +74,25 @@ h2,
     color: #000000;
 }
 
+@media screen and (max-width: 600px) {
+    .quotes {
+        position: absolute;
+        top: 290px;
+        left: 75px;
+    }
+}
+
+
+/*
+@media screen and (max-width: 320px) {
+    #form-section {
+        position: relative;
+        top: 300px;
+        left: 50px;
+    }
+}
+*/
+
 .form-parts {
     margin-top: 3em;
     margin-left: 35em;
@@ -67,6 +106,15 @@ h2,
     font-size: 15px;
     line-height: 24px;
     color: #000000;
+}
+
+@media screen and (max-width: 400px) {
+    .form-parts {
+        display: flex;
+        position: absolute;
+        top: 155px;
+        left: -500px;
+    }
 }
 
 .form-parts input[type=text] {
@@ -131,14 +179,14 @@ button {
     font-family: 'Roboto';
 }
 
-@media screen and (min-width: 320px) {
-    body {
-        border-top: 10px;
-    }
-    .heading-word {
-        font-size: 20px;
-    }
-    .form-parts {
-        float: left;
-    }
+@media screen and (min-width: 320px) {}
+
+.heading-word {
+    font-size: 20px;
 }
+
+.form-parts {
+    float: left;
+}
+
+
