--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ h2,
     font-size: 30px;
     line-height: 30px;
     color: #EB322E;
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 600px) {
@@ -78,7 +79,9 @@ h2,
     .quotes {
         position: absolute;
         top: 290px;
-        left: 75px;
+        left: 150px;
+        font-size: 15px;
+        width: 265px;
     }
 }
 
@@ -108,26 +111,22 @@ h2,
     color: #000000;
 }
 
-@media screen and (max-width: 400px) {
-    .form-parts {
-        display: flex;
-        position: absolute;
-        top: 155px;
-        left: -500px;
-    }
-}
-
 .form-parts input[type=text] {
-    width: 232px;
+    height: 1.4em;
+    width: 40em;
     background: #FFFFFF;
     margin-left: 12px;
-    border-radius: 8px;
+    border-radius: 5px;
+    color: black;
 }
 
 .form-parts input[type=number] {
     background: #FFFFFF;
-    margin-left: 12px;
-    border-radius: 8px;
+    margin-left: 11px;
+    border-radius: 5px;
+    color: #000000;
+    height: 1.4em;
+    width: 40em;
 }
 
 .form-parts img {
@@ -147,6 +146,14 @@ h2,
     top: 313px;
 }
 
+@media screen and (max-width: 600px) {
+    .name-form {
+        position: absolute;
+        top: 350px;
+        left: -500px;
+    }
+}
+
 .weight-form {
     display: flex;
     flex-direction: row;
@@ -157,6 +164,14 @@ h2,
     top: 383px;
 }
 
+@media screen and (max-width: 600px) {
+    .weight-form {
+        position: absolute;
+        top: 405px;
+        left: -500px;
+    }
+}
+
 .height-form {
     display: flex;
     flex-direction: row;
@@ -165,6 +180,14 @@ h2,
     height: 24px;
     left: 521px;
     top: 453px;
+}
+
+@media screen and (max-width: 600px) {
+    .height-form {
+        position: absolute;
+        top: 460px;
+        left: -500px;
+    }
 }
 
 button {
@@ -179,7 +202,12 @@ button {
     font-family: 'Roboto';
 }
 
-@media screen and (min-width: 320px) {}
+@media screen and (max-width: 600px) {
+    button {
+        position: absolute;
+        left: 150px;
+    }
+}
 
 .heading-word {
     font-size: 20px;
@@ -188,5 +216,3 @@ button {
 .form-parts {
     float: left;
 }
-
-
