--- a/css/styles.css
+++ b/css/styles.css
@@ -1,218 +1,211 @@
+*,
+*:before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    border: 10px 10px 10px 10px;
-    background: url(/weight-tracker/img/main-bg.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: 'Roboto';
+    font-size: 16px;
+    font-family: 'Montserrat';
 }
 
-@media screen and (max-width: 600px) {
-    body {
-        background: url(/weight-tracker/img/mobile-bg.svg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        display: flex;
-        flex-direction: wrap;
-        align-content: flex-start;
-    }
+#container {
+    width: 100%;
+    overflow: auto;
+    height: 100vh;
 }
 
-h2,
+h3,
+h4,
+h5 {
+    font-size: 52px;
+}
+
 .heading-word {
-    margin: auto;
+    font-size: 42px;
+    width: 90%;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-top: 30px;
+}
+
+.content-area {
+    overflow: auto;
+    width: 80%;
+    margin-right: 20px;
+    margin-left: 20px;
     position: absolute;
-    width: 337px;
-    height: 41px;
-    left: 500px;
-    top: 50px;
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 30px;
-    color: #EB322E;
-    text-decoration: underline;
+    top: 8%;
+    bottom: 8%;
+    right: 5%;
+    left: 5%;
 }
 
-@media screen and (max-width: 600px) {
-    h2,
-    .heading-word {
-        position: absolute;
-        top: 25px;
-        left: 100px;
-    }
+.top-part {
+    width: 100%;
+    position: relative;
+    padding-top: 26px;
 }
 
-.image-section>svg {
-    position: absolute;
-    width: 450px;
-    height: 280px;
-    left: 130px;
-    top: 158px;
-    background: #FFFFFF;
-}
-
-@media screen and (max-width: 600px) {
-    .image-section>svg {
-        position: absolute;
-        width: 200px;
-        height: 190px;
-        top: 120px;
-        left: 10px;
-    }
+.image-section img {
+    position: relative;
+    width: 70%;
+    height: 300px;
 }
 
 .quotes {
-    position: absolute;
-    width: 365px;
-    left: 130px;
-    top: 420px;
-    font-family: 'Roboto', sans-serif;
+    width: 30%;
+    position: relative;
+    float: right;
+    bottom: 220px;
+    right: 120px;
+    font-size: 28px;
+    font-weight: lighter;
     font-style: italic;
-    font-weight: 300;
-    font-size: 19px;
-    line-height: 20px;
-    color: #000000;
 }
 
-@media screen and (max-width: 600px) {
-    .quotes {
-        position: absolute;
-        top: 290px;
-        left: 150px;
-        font-size: 15px;
-        width: 265px;
-    }
+#form-content {
+    position: relative;
+    width: 80%;
+    display: flex;
+    float: left;
+    left: 140px;
+    bottom: 70px;
+    flex-direction: row;
 }
 
-
-/*
-@media screen and (max-width: 320px) {
-    #form-section {
-        position: relative;
-        top: 300px;
-        left: 50px;
-    }
-}
-*/
-
-.form-parts {
-    margin-top: 3em;
-    margin-left: 35em;
-    position: absolute;
-    top: 310px;
-    left: 515px;
-    height: 500em;
-    font-family: 'Roboto';
-    font-style: normal;
+label {
+    padding: 6px 5px 0 5px;
     font-weight: 400;
-    font-size: 15px;
-    line-height: 24px;
-    color: #000000;
 }
 
-.form-parts input[type=text] {
-    height: 1.4em;
-    width: 40em;
-    background: #FFFFFF;
-    margin-left: 12px;
+input {
+    display: block;
+    width: 75%;
+    height: 33px;
+    padding: 3px 10px;
+    font-size: 1em;
+    border: 2px solid #f2f2f2;
     border-radius: 5px;
-    color: black;
+    background-color: #f2f2f2;
 }
 
-.form-parts input[type=number] {
-    background: #FFFFFF;
-    margin-left: 11px;
-    border-radius: 5px;
-    color: #000000;
-    height: 1.4em;
-    width: 40em;
-}
-
-.form-parts img {
-    padding-right: 10px;
-    color: white;
-    width: 25px;
-    height: 24px;
-}
-
-.name-form {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    width: 69px;
-    height: 24px;
-    left: 521px;
-    top: 313px;
-}
-
-@media screen and (max-width: 600px) {
-    .name-form {
-        position: absolute;
-        top: 350px;
-        left: -500px;
-    }
-}
-
-.weight-form {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    width: 91px;
-    height: 24px;
-    left: 516px;
-    top: 383px;
-}
-
-@media screen and (max-width: 600px) {
-    .weight-form {
-        position: absolute;
-        top: 405px;
-        left: -500px;
-    }
-}
-
-.height-form {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    width: 85px;
-    height: 24px;
-    left: 521px;
-    top: 453px;
-}
-
-@media screen and (max-width: 600px) {
-    .height-form {
-        position: absolute;
-        top: 460px;
-        left: -500px;
-    }
+input[type="name"],
+input[type="number"] {
+    background-color: #f2f2f2;
+    color: #2f2e41;
 }
 
 button {
-    position: absolute;
-    width: 100px;
+    margin-left: 8px;
+}
+
+#form-button {
+    border-radius: 5px;
+    background-color: #eb322e;
+    color: #2f2e41;
+    border: 3px solid #eb322e;
+    width: 25%;
     height: 30px;
-    left: 86em;
-    top: 41em;
-    background: #EB322E;
-    border-radius: 13px;
-    color: white;
-    font-family: 'Roboto';
+    text-align: center;
+    font-weight: bold;
 }
 
-@media screen and (max-width: 600px) {
-    button {
-        position: absolute;
-        left: 150px;
-    }
+#form-button:hover {
+    color: #f2f2f2;
+    background: #2f2e41;
+    border: 2px solid #2f2e41;
 }
 
-.heading-word {
-    font-size: 20px;
-}
-
-.form-parts {
+table {
+    position: relative;
+    width: 50%;
+    height: 20px;
+    top: 57%;
     float: left;
+    left: 23%;
+}
+
+th,
+td {
+    padding: 7px 10px 10px 10px;
+}
+
+th {
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    border-bottom: 2px solid #eb322e;
+    border-top: 1px solid #f2f2f2;
+    text-align: center;
+}
+
+td:even {
+    background-color: #eb322e;
+}
+
+.weight-values,
+.height-values {
+    text-align: center;
+}
+
+@media (max-width: 480px) {
+    body {
+        font-size: 16px;
+    }
+    .heading-word {
+        font-size: 30px;
+        padding-left: 80px;
+    }
+    #container {
+        width: 80%;
+    }
+    .top-part {
+        padding-top: 16px;
+    }
+    .image-section img {
+        width: 100%;
+        overflow: auto;
+    }
+    .quotes {
+        position: relative;
+        float: right;
+        width: 50%;
+        right: 60px;
+        bottom: 50px;
+        font-size: 16px;
+    }
+    #form-content {
+        display: block;
+        width: 50%;
+        top: 140px;
+        left: 39px;
+    }
+    label {
+        font-weight: 300;
+        font-size: 12px;
+    }
+    input {
+        width: 130%;
+    }
+    #form-button {
+        margin-top: 10px;
+        width: 50%;
+    }
+    table {
+        position: relative;
+        top: 79%;
+        height: 10px;
+        float: left;
+        width: 30%;
+    }
+    th,
+    td {
+        padding: none;
+    }
+    th {
+        font-size: 14px;
+    }
 }
